--- a/app/config/service.conf
+++ b/app/config/service.conf
@@ -1,5 +1,6 @@
 [program:gunicorn]
-command=fab gunicorn
+;command=fab gunicorn
+command=gunicorn -b :8080 --log-file /dev/stdout --worker-class socketio.sgunicorn.GeventSocketIOWorker wsgi --log-file=/dev/stdout
 ;command=/home/ec2-user/cross-platform/.pydev/bin/gunicorn -b 127.0.0.1:8080 --worker-class socketio.sgunicorn.GeventSocketIOWorker wsgi:application
 directory=/cross-platform/
 ;environment=PATH="/home/ec2-user/cross-platform/.pydev/bin"
@@ -11,7 +12,7 @@ stopsignal=QUIT
 autostart=true
 autorestart=true
 startretries=100
-startsecs=60
+;startsecs=60
 
 ;[program:pushman]
 ;command=/home/ec2-user/gcm-apns/.pyenv/bin/python /home/ec2-user/gcm-apns/gcmapns.py
