--- a/app/config/service.conf
+++ b/app/config/service.conf
@@ -1,6 +1,6 @@
 [program:gunicorn]
 ;command=fab gunicorn
-command=gunicorn -b :8080 --log-file /dev/stdout --worker-class socketio.sgunicorn.GeventSocketIOWorker wsgi --log-file=/dev/stdout
+command=gunicorn -w $(( 2 * `cat /proc/cpuinfo | grep 'core id' | wc -l` + 1 )) -b :8080 --log-file /dev/stdout --worker-class socketio.sgunicorn.GeventSocketIOWorker wsgi --log-file=/dev/stdout
 ;command=/home/ec2-user/cross-platform/.pydev/bin/gunicorn -b 127.0.0.1:8080 --worker-class socketio.sgunicorn.GeventSocketIOWorker wsgi:application
 directory=/cross-platform/
 ;environment=PATH="/home/ec2-user/cross-platform/.pydev/bin"
