--- a/fig.yml
+++ b/fig.yml
@@ -4,11 +4,14 @@ web:
         - app
     ports:
         - "80:80"
+    volumes:
+        - /var/www:/www
+        - web/default.tmpl:/etc/nginx/conf.d/default.tmpl
 app:
     build: app
     environment:
         #- MONGODB_URL=mongodb://db:27017/my_db
-        - MONGODB_URL=mongodb://$DB_HOST/my_db
+        - MONGODB_URL=mongodb://docker_db1/my_db
     working_dir: /cross-platform
     #command: bash
     #ports:
