--- a/fig.yml
+++ b/fig.yml
@@ -11,7 +11,7 @@ app:
     build: app
     environment:
         #- MONGODB_URL=mongodb://db:27017/my_db
-        - MONGODB_URL=mongodb://docker_db1/my_db
+        - MONGODB_URL=mongodb://docker-db1/my_db
     working_dir: /cross-platform
     volumes:
         - /etc/hosts:/etc/hosts
