Fix:Fixing setting for pypy

--- a/app/config/service.conf
+++ b/app/config/service.conf
@@ -1,6 +1,7 @@
 [program:gunicorn]
-command=gunicorn -c gunicorn.ini --log-file=/dev/stdout wsgi
+command=/opt/pypy-env/bin/gunicorn -c gunicorn.ini --log-file=/dev/stdout wsgi
 directory=/cross-platform/
+;environment=PYPY_GC_MAX_DELTA=200MB
 ;environment=PATH="/home/ec2-user/cross-platform/.pydev/bin"
 redirect_stderr=true
 ;stdout_logfile=/var/log/wsgi.log
