--- a/app/config/task.conf
+++ b/app/config/task.conf
@@ -1,6 +1,5 @@
 [program:cross-worker]
-;command=fab task
-command=celery -A fbone.tasks.celery worker -P gevent --loglevel=info -E
+command=/opt/pypy-env/bin/celery -A fbone.tasks.celery worker -P gevent --loglevel=info -E
 directory=/cross-platform/
 ;environment=PATH="/home/ec2-user/cross-platform/.pydev/bin"
 redirect_stderr=true
