--- a/web/conf/nginx.conf
+++ b/web/conf/nginx.conf
@@ -1,27 +1,54 @@
-user nginx;
-worker_processes  3;
+user root;
+worker_processes  auto;
 
 error_log  /var/log/nginx/error.log;
 pid        /var/run/nginx.pid;
-worker_rlimit_nofile 102400;
+worker_rlimit_nofile 20480;
 
 events {
   use epoll;
-  worker_connections  30000;
+  #worker_connections  4096;
+  worker_connections  10240;
+  accept_mutex on;
 }
 
+#http {
+#
+#  include       /etc/nginx/mime.types;
+#  default_type  application/octet-stream;
+#
+#  access_log    /var/log/nginx/access.log;
+#
+#  sendfile on;
+#  tcp_nopush on;
+#  tcp_nodelay on;
+#
+#  keepalive_timeout  65;
+#
+#  server_names_hash_bucket_size 64;
+#  types_hash_max_size 2048;
+#  types_hash_bucket_size 64;
+#
+#  include /etc/nginx/conf.d/*.conf;
+#  include /etc/nginx/sites-enabled/*;
+#}
 http {
+  charset                         utf-8;
+  client_body_timeout             10;
+  client_header_timeout           10;
+  client_max_body_size            10m;
+  default_type                    application/octet-stream;
 
-  include       /etc/nginx/mime.types;
-  default_type  application/octet-stream;
-
-  access_log    /var/log/nginx/access.log;
-
-  sendfile on;
-  tcp_nopush on;
-  tcp_nodelay on;
-
-  keepalive_timeout  1;
+  keepalive_timeout               65;
+  reset_timedout_connection       on;
+  send_timeout                    10;
+  server_tokens                   off;
+  sendfile                        on;
+  server_names_hash_bucket_size   64;
+  tcp_nodelay                     on;
+  tcp_nopush                      on;
+  keepalive_requests              65535;
+  access_log off;
 
   gzip  on;
   gzip_http_version 1.0;
@@ -32,10 +59,7 @@ http {
   gzip_min_length  1000;
   gzip_disable     "MSIE [1-6]\.";
 
-  server_names_hash_bucket_size 64;
-  types_hash_max_size 2048;
-  types_hash_bucket_size 64;
-
   include /etc/nginx/conf.d/*.conf;
   include /etc/nginx/sites-enabled/*;
 }
+
