--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -6,6 +6,7 @@ COPY cross-platform /cross-platform
 # Install Python Setuptools
 RUN apt-get update && \
  apt-get --no-install-recommends install -y build-essential python-dev libpq-dev bzip2 wget ca-certificates git supervisor \
+ libtiff4-dev libjpeg8-dev zlib1g-dev libfreetype6-dev liblcms2-dev libwebp-dev tcl8.5-dev tk8.5-dev python-tk \
  && apt-get clean \
  && rm -r /var/lib/apt/lists/*
 
