--- a/fluentd/Dockerfile
+++ b/fluentd/Dockerfile
@@ -2,10 +2,10 @@ FROM google/debian:wheezy
 MAINTAINER liao@oneofthem.jp
 # install curl and fluentd deps
 RUN apt-get update \
-    && apt-get install -y curl libcurl4-openssl-dev ruby ruby-dev make libxml2-dev libxml2 libxslt1-dev \
+    && apt-get install -y curl libcurl4-openssl-dev ruby ruby-dev make libxml2-dev libxml2 libxslt1-dev libxslt1.1 \
     \
     && gem install fluentd --no-ri --no-rdoc \
-    && gem install nokogiri -- --use-system-libraries --no-ri --no-rdoc \
+    && gem install nokogiri --no-ri --no-rdoc -- --use-system-libraries \
     && fluent-gem install --no-ri --no-rdoc \
     fluent-plugin-elasticsearch \
     fluent-plugin-record-modifier \
@@ -13,6 +13,7 @@ RUN apt-get update \
     fluent-plugin-record-reformer \
     fluent-plugin-s3 \
     fluent-plugin-exclude-filter \
+    fluent-plugin-forest \
     && mkdir /etc/fluentd/ \
     \
     && cd /usr/local/bin \
@@ -20,10 +21,9 @@ RUN apt-get update \
     | tar -xzv \
     && \
     echo "==> Clean up..."  && \
-    apt-get remove -y --auto-remove curl libcurl4-openssl-dev ruby-dev make libxml2-dev libxml2 libxslt1-dev && \
+    apt-get remove -y --auto-remove curl libcurl4-openssl-dev ruby-dev make libxml2-dev libxslt1-dev && \
     apt-get clean  && \
     rm -rf /var/lib/apt/lists/*
-
 # add startup scripts and config files
 ADD ./bin    /app/bin
 ADD ./config /app/config
