--- a/fig.yml
+++ b/fig.yml
@@ -7,9 +7,10 @@ fluentd:
         - fluentd/config:/app/config
         - fluentd/bin:/app/bin
     environment:
-        - AWS_KEY_ID="{{ .Env.AWS_KEY_ID }}"
-        - AWS_SEC_KEY="{{ .Env.AWS_SEC_KEY }}"
-        - AWS_S3_BUCKET= "{{ .Env.AWS_S3_BUCKET }}"
+        - AWS_KEY_ID={{ .Env.AWS_KEY_ID }}
+        - AWS_SEC_KEY={{ .Env.AWS_SEC_KEY }}
+        - AWS_S3_BUCKET={{ .Env.AWS_S3_BUCKET }}
+
     command: /app/bin/start
 
 logspout:
