Fix:Fixing log setting

--- a/app/config/task.conf
+++ b/app/config/task.conf
@@ -3,7 +3,8 @@ command=/opt/pypy-env/bin/celery -A fbone.tasks.celery worker -P gevent --loglev
 directory=/cross-platform/
 ;environment=PATH="/home/ec2-user/cross-platform/.pydev/bin"
 redirect_stderr=true
-;stdout_logfile=/var/log/cross-worker.log
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
 user=nobody
 stopsignal=QUIT
 autostart=true
