--- a/app/config/service.conf
+++ b/app/config/service.conf
@@ -1,12 +1,17 @@
+[supervisord]
+logfile=/dev/null
+pidfile=/var/run/supervisord.pid
+nodaemon=true
+
 [program:gunicorn]
 command=/opt/pypy-env/bin/gunicorn -c gunicorn.ini --log-file=/dev/stdout wsgi
 directory=/cross-platform/
 ;environment=PYPY_GC_MAX_DELTA=200MB
 ;environment=PATH="/home/ec2-user/cross-platform/.pydev/bin"
-redirect_stderr=true
-;stdout_logfile=/var/log/wsgi.log
-;stdout_logfile_backups = 7
 ;user=ec2-user
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
 stopsignal=QUIT
 autostart=true
 autorestart=true
